Remove duplicate builder overrides in OpenAiChatOptions
- Removed toolCallbacks, toolNames, toolContext, internalToolExecutionEnabled, frequencyPenalty, presencePenalty, stopSequences, temperature, topK, topP overrides from the OpenAiChatOptions.Builder class.
- Fixed combineWith() to properly merge toolCallbacks and toolNames instead of replacing them.

Signed-off-by: guanxu <1510424541@qq.com>